tests/baselines/reference/parserSetAccessorWithTypeParameters1(strict=true).errors.txt
parserSetAccessorWithTypeParameters1.ts(2,8): error TS1094: An accessor cannot have type parameters.
parserSetAccessorWithTypeParameters1.ts(2,8): error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
parserSetAccessorWithTypeParameters1.ts(2,15): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== parserSetAccessorWithTypeParameters1.ts (3 errors) ====
    class C {
       set foo<T>(v) { }
           ~~~
!!! error TS1094: An accessor cannot have type parameters.
           ~~~
!!! error TS7032: Property 'foo' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                  ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }